tests/neg-custom-args/captures/erased-methods2.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/erased-methods2.scala:20:4 -------------------------------
20 |  = (x$1: CT[Ex3]^)  // error
   |    ^
   |    Found:    (erased x$1: CT[Ex3]^) ?->? (erased x$2: CT[Ex2]^?) ?->{x$1} Unit
   |    Required: (erased x$1: CT[Ex3]^) ?->{fresh} (erased x$2: CT[Ex2]^) ?->{localcap} Unit
   |
   |    Note that the existential capture root in (erased x$2: CT[Ex2]^) ?=> Unit
   |    cannot subsume the capability x$1.type
21 |     ?=> (x$2: CT[Ex2]^)
22 |     ?=>
23 |      //given (CT[Ex3]^) = x$1
24 |      Throw(new Ex3)
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/erased-methods2.scala:31:4 -------------------------------
31 |  = (erased x$1: CT[Ex3]^) // error
   |    ^
   |Found:    (erased x$1: CT[Ex3]^) ?->? (erased x$1: CT[Ex2]^?) ?->{x$1} (erased x$2: CT[Ex1]^?) ?->{x$1} Unit
   |Required: (erased x$1: CT[Ex3]^) ?->{fresh} (erased x$1: CT[Ex2]^) ?->{localcap} (erased x$2: CT[Ex1]^) ?->{localcap} Unit
   |
   |Note that the existential capture root in (erased x$1: CT[Ex2]^) ?=> (erased x$2: CT[Ex1]^) ?->{localcap} Unit
   |cannot subsume the capability x$1.type
32 |     ?=> (erased x$2: CT[Ex2]^)
33 |     ?=> (erased x$3: CT[Ex1]^)
34 |     ?=> Throw(new Ex3)
   |
   | longer explanation available when compiling with `-explain`
